--- a/index.html
+++ b/index.html
@@ -605,12 +605,12 @@
             <br>
             <h4><b>Dictionaries(maps)</b></h4>
             <br>            
-            <h4><code>Dictionaries are made of values with a unique key.</h4>
-            Mass_Effect = {'first' : 'Mass Effect'<br>
+            <h4>Dictionaries are made of values with a unique key.</h4>
+            <h4><code>Mass_Effect = {'first' : 'Mass Effect'<br>
                         'second' : 'Mass Effect 2'<br>
                         'third' : 'Mass Effect 3'<br>
                         'fourth' : 'Mass Effect Andromeda'<br>
-            }</code>
+            }</code></h4>
              <h4><code>print(Mass_Effect['second'])</code>Output: Mass Effect 2</h4> 
              <h4><code>del Mass_Effect['fourth'] </code> - Deleting element</h4> 
              <h4><code>Mass_Effect['fourth'] = 'MEA' </code> - adding element (or changing contents of an element)</h4> 
@@ -619,6 +619,31 @@
              <h4><code>print(Mass_Effect.values()) </code>- list of values </h4> 
              <br>
              <h4><b>Conditionals(if,else,elif/== != >= <=)</b></h4>
+             <h4><code>age=21<br>
+             if age > 16 :<br>
+             &nbsp;&nbsp;&nbsp;&nbsp;print('You are old enough to drive')<br>
+             else :<br>
+             &nbsp;&nbsp;&nbsp;&nbsp;print('You are not old enough to drive')</code>Output: You are old enough to drive</h4>
+             <h4><code><br>
+             if age >= 21 :<br>
+             &nbsp;&nbsp;&nbsp;&nbsp;print('You are old enough to drive a tractor trailer')<br>
+             elif age >= 16 :<br>
+             &nbsp;&nbsp;&nbsp;&nbsp;print('You are old enough to drive')<br>
+             else :<br>
+             &nbsp;&nbsp;&nbsp;&nbsp;print('You are not old enough to drive')</code>Output: You are old enough to drive a tractor trailer</h4> 
+             <h4><code><br>
+             age=30<br>
+             if ((age >= 1) and (age<=18))<br>
+             &nbsp;&nbsp;&nbsp;&nbsp;print("You get a birthday")<br>
+             elif (age == 21) or (age>=65)<br>
+             &nbsp;&nbsp;&nbsp;&nbsp;print("You get a birthday")<br>
+             elif not(age==30):<br>
+             &nbsp;&nbsp;&nbsp;&nbsp;print("You don't get a birthday")<br>
+             else:<br>
+             &nbsp;&nbsp;&nbsp;&nbsp;print("You get a birthday party yeah ")</code>Output: You get a birthday party yeah</h4>
+             
+             <br>
+             <h4><b>Looping</b></h4>
 
             <hr>
         </li> <!--Summary Tutorials--> 
