--- a/index.html
+++ b/index.html
@@ -658,8 +658,21 @@
              &nbsp;&nbsp;&nbsp;&nbsp; for y in range (0,3):<br>
              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; print(num_list[x][y])</code>Output: 1 2 3 10 20 30 100 200 300 (each on a new line)</h4>
              <h4><code><br> random_num = random.randrange(0,100) </code> - random number in range</h4>
-             
-             <!-- WHILE LOOPS NEXT-->
+             <h4><code><br> while(random_num !=15):<br>
+             &nbsp;&nbsp;&nbsp;&nbsp;print(random_num)<br>
+             &nbsp;&nbsp;&nbsp;&nbsp;random_num = random.randrange(0,100)</code>Output: Random numbers until random number is 15(not printed)</h4>
+             <h4><code><br> i = 0;<br>
+             while(i<=20):<br>
+             &nbsp;&nbsp;&nbsp;&nbsp;if(i%2==0):<br>
+             &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;print(i)<br>
+             &nbsp;&nbsp;&nbsp;&nbsp; elif(i == 9):<br>
+             &nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;&nbsp; break<br>
+             &nbsp;&nbsp;&nbsp;&nbsp; else:<br> 
+             &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; i += 1 #same as i = i + 1<br>
+             &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; continue #ignoring everything below<br>
+             &nbsp;&nbsp;&nbsp;&nbsp; i += 5 #(this should be ignored)</code>Output: 0 2 4 6 8</h4>
+
+             <!-- FUNCTIONS NEXT-->
 
             <hr>
         </li> <!--Summary Tutorials--> 
